log
Sun, Aug 17, 2025  7:13:45 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Aug 17, 2025  7:20:47 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
3d530a7
Sun, Aug 17, 2025  7:29:44 PM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma = suma + numero;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
a762876
